# fc-catalogo-de-videos

./: .dockerignore  .editorconfig  .gitlab-ci.yml  .isort.cfg  .pylintrc  Dockerfile  Dockerfile-dev  Makefile  README.md  changelog.md  docker-compose.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini  setup.cfg  start-gunicorn.sh  start.sh
.devcontainer/: devcontainer.json  entrypoint.sh  gitconfig  start-celery.sh  start.sh
.docker/dev/: entrypoint.sh  start.sh
apps/castmembers/: admin.py  apps.py  entities.py  models.py  serializers.py
apps/castmembers/migrations/: 0001_initial.py
apps/categories/: admin.py  components.puml  components_2.puml  der.puml  entities.py  exceptions.puml  failover.puml  implantacao.puml  implementacao.puml  implementacao_entidade.puml  implementacao_upload.puml  mappers.py  models.py  repositories.py  serializers.py  visao_processos.puml
apps/core/: entities.py  exceptions.py  fields.py  managers.py  messages.py  models.py  pagination.py  storages.py  utils.py  v1_urls.py  v2_urls.py  value_objects.py
apps/genres/: admin.py  entities.py  models.py  serializers.py
apps/healthcheck/: urls.py  views.py
apps/videos/: admin.py  entities.py  events.py  filters.py  models.py  serializers.py  tasks.py  views.py
infra/prod/: gunicorn.py  nginx.conf
main/: celery.py  urls.py  v1_urls.py
main/settings/: base.py  dev.py  production.py  test.py
requirements/: base.txt  dev.txt
tests/: conftest.py
tests/factories/: __init__.py  cast_members.py  categories.py  genres.py  videos.py
tests/unit/: test_sum.py
(+123 files in other folders)
